src/scss/components/_pdp.scss
@import '../variables';

.pdp {
  position: relative;
  width: 90vw;
  height: 513px;
  left: 112px;
  display: flex;
  margin: 70px 0;

  &-left {
    width: 100px;
    height: 500px;
    overflow-y: auto;
    overflow-x: hidden;

    &__images {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      width: 80px;

      &_img {
        margin-top: 10px;
        width: 80px;
        height: 80px;
        cursor: pointer;
        transition: all 0.3s ease-in-out;
        object-fit: contain;

        &:hover {
          width: 82px;
          height: 82px;
        }
      }
    }
  }

  &-right {
    display: flex;
    width: 85%;
    justify-content: space-between;

    &-main-img {
      margin-left: 40px;
      width: 500px;
      height: 400px;
      object-fit: contain;

      img {
        width: 100%;
        height: 100%;

      }
    }

    &-content {
      width: 292px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;

      &__header {
        h2 {
          font-weight: 600;
          font-size: 30px;
          line-height: 27px;
          margin-bottom: 5px;
        }

        span {

          font-weight: 400;
          font-size: 30px;
          line-height: 27px;
        }
      }

      &__sizes {
        font-style: normal;
        font-weight: 700;
        font-size: 18px;
        line-height: 18px;
        margin-top: 10px;

        h3 {
          text-transform: uppercase;
          font-family: 'Roboto Condensed', sans-serif;
        }

        &-buttons {
          margin: 8px 0;

          &.capacity {
            margin-top: 7px;

            h3 {
              margin-bottom: 7px;
            }
          }

          &.ports {
            margin-top: 7px;

            h3 {
              margin-bottom: 7px;
            }
          }

          &.touch {
            margin-top: 7px;

            h3 {
              margin-bottom: 7px;
            }
          }

          button {
            width: 63px;
            height: 45px;
            border: 1px solid $text;
            font-weight: 400;
            font-size: 16px;
            line-height: 17px;
            background: $background;
            cursor: pointer;
            transition: all 0.2s ease-in-out;
            font-family: 'Source Sans Pro', sans-serif;
            margin: 5px 10px 0 0;

            &.active {
              background: $text;
              color: $background;
            }

            &:hover {
              background: $text;
              color: $background;
            }
          }
        }


      }

      &__colors {
        width: 100%;
        margin-top: 8px;

        h3 {
          text-transform: uppercase;
          font-family: 'Roboto Condensed', sans-serif;
        }

        &-btn {
          width: 32px;
          height: 32px;
          border: 2px solid rgba(0, 0, 0, .4);
          cursor: pointer;
          margin-right: 8px;

          &.active {
            border: 2px solid #5ECE7B;
          }
        }

      }

      &__price {
        h3 {
          margin-bottom: 10px;
          text-transform: uppercase;
          font-family: 'Roboto Condensed', sans-serif;
        }

        span {
          font-weight: 700;
          font-size: 24px;
          line-height: 18px;
        }

        button {
          width: 100%;
          height: 52px;
          margin-top: 20px;
          background: $primary;
          border: none;
          color: $background;
          text-transform: uppercase;
          font-weight: 600;
          font-size: 16px;
          cursor: pointer;
          transition: all 0.3s ease-in-out;

          &:hover {
            background: $background;
            border: 1px solid $text;
            color: $text;
          }
        }
      }

      &__footer {
        margin-top: 10px;
        height: 150px;

        p {
          font-weight: 400;
          text-align: left;
          line-height: 1.5rem;
          font-size: 15px;
          font-family: 'Roboto', sans-serif;

        }
      }
    }
  }
}

